fix container, make adaptive, not responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,21 +44,25 @@ img {
 }
 
 .container {
-  max-width: 767px;
   margin: 0 auto;
   padding: 0 16px 0 16px;
+  max-width: 1158px;
+}
+
+@media (max-width: 767px) {
+  .container {
+    width: 320px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1157px) {
   .container {
-    max-width: 1157px;
-    margin: 0 auto;
-    padding: 0 16px 0 16px;
+    width: 768px;
   }
 }
 @media (min-width: 1158px) {
   .container {
-    max-width: 1158px;
+    width: 1158px;
     padding: 0 15px 0 15px;
   }
 }
@@ -330,7 +334,7 @@ section {
 }
 
 .about-list {
-  width: 288px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 72px;
@@ -629,10 +633,6 @@ section {
   padding: 96px 0;
 }
 
-.footer-main-container {
-  margin: 0 auto;
-}
-
 .footer-link-container {
   margin: 72px auto;
 }
@@ -747,13 +747,12 @@ section {
 
 @media (min-width: 768px) {
   .footer-main-container {
-    padding: 0 96px;
+    padding: 0 108px;
     align-items: baseline;
   }
   .footer-tab-container {
     display: flex;
     column-gap: 24px;
-    width: 496px;
     margin-bottom: 72px;
   }
   .footer-link-container {
